RESOLVED FIXED232104
FontCascade::widthForSimpleText fails to produce matching measured width for monospace font
https://bugs.webkit.org/show_bug.cgi?id=232104
Summary FontCascade::widthForSimpleText fails to produce matching measured width for ...
alan
Reported 2021-10-21 14:05:27 PDT
ssia
Attachments
Patch (4.56 KB, patch)
2021-10-21 15:13 PDT, alan
no flags
Patch (4.61 KB, patch)
2021-10-21 15:14 PDT, alan
ews-feeder: commit-queue-
alan
Comment 1 2021-10-21 14:16:58 PDT
alan
Comment 2 2021-10-21 15:13:49 PDT
alan
Comment 3 2021-10-21 15:14:56 PDT
Myles C. Maxfield
Comment 4 2021-10-21 20:23:59 PDT
🤔
EWS
Comment 5 2021-10-22 06:24:18 PDT
Committed r284677 (243397@main): <https://commits.webkit.org/243397@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 442073 [details].
Note You need to log in before you can comment on or make changes to this bug.