FontCascade::widthForSimpleText fails to produce matching measured width for monospace font https://bugs.webkit.org/show_bug.cgi?id=232104 <rdar://83991027>

Reviewed by Antti Koivisto.

Source/WebCore:

Adjust widthForSimpleText to match WidthIterator's logic as the comment says:

  "This is needed only to match the result of the slow path
   Same glyph widths but different floating point arithmetic can produce different run width."
(see r213008)

* platform/graphics/FontCascade.cpp:
(WebCore::FontCascade::widthForSimpleText const):

LayoutTests:

* platform/ios-wk2/TestExpectations:


Canonical link: https://commits.webkit.org/243397@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284677 268f45cc-cd09-0410-ab3c-d52691b4dbfc